--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
