--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.37.5",
